fix bug parse transaction, UI translate

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -957,7 +957,7 @@
     <string name="cate_food">Thực phẩm &amp; Đồ uống</string>
     <string name="cate_footwear">Giày dép</string>
     <string name="cate_friend">Bạn bè &amp; Người yêu</string>
-    <string name="cate_fun_money">Tiền vui</string>
+    <string name="cate_fun_money">Tiền vui chơi</string>
     <string name="cate_funeral">Tang lễ</string>
     <string name="cate_games">Trò chơi</string>
     <string name="cate_gas">Hóa đơn Gas</string>
